
The statute of thy beauty thou wilt take,    // Tue Aug 29 2023 20:30:19
	alak@5.0.0-up.22
		 - src/constructor.ts
		 - src/extension.ts
		 - src/index.ts
		 - src/model.ts
		 - src/namespaces.ts
		 - src/proxyAtom.ts
		 - test/atomExtension.test.ts
		 - test/events.test.ts
		 - test/init.event.test.ts
		 - test/multi.test.ts
		 - types/AlakAtom.ts
		 - types/AlakConstructor.d.ts
		 - types/Unions.d.ts
		 - types/graph.d.ts DELETED
		 - types/spread.d.ts DELETED
		 - types/stringkey.d.ts DELETED
	atom@5.0.0-up.12
		 - src/cloud.create.ts
		 - src/cloud.orbit.ts
		 - src/cloud.parse.ts
		 - src/cloud.proxy.ts
		 - src/extra.ts
		 - src/index.ts
		 - src/nuclear.ts
		 - src/property.ts
		 - test/bud/model.ts
		 - types/base.d.ts
	bitmask@0.0.17
		 - src/BitWise.ts
	nucleus@5.0.0-up.9
		 - src/computed.ts
	rune@0.0.4
		 - src/isDefined.ts


What's in the brain that ink may character    // Sun Aug 27 2023 19:54:34
	alak@5.0.0-up.21
		 - src/constructor.ts
		 - src/index.ts
		 - src/model.ts
		 - src/namespaces.ts
		 - test/atomExtension.test.ts
		 - test/events.test.ts
		 - test/init.event.test.ts
		 - test/multi.test.ts
		 - test/submodelid.ts
		 - types/AlakAtom.ts
		 - types/AlakConstructor.d.ts
		 - types/Unions.d.ts
	atom@5.0.0-up.11
		 - src/nuclear.ts
	nucleus@5.0.0-up.8
		 - types/Quark.d.ts


Him in thy course untainted do allow    // Wed Aug 23 2023 11:06:23
	alak@5.0.0-up.20
		 - src/constructor.ts
		 - src/index.ts
		 - src/model.ts
		 - src/namespaces.ts
		 - types/Unions.d.ts
	atom@5.0.0-up.10
		 - src/extra.ts
		 - src/nuclear.ts
		 - src/storage.ts
		 - types/base.d.ts
	nucleus@5.0.0-up.7
		 - src/bus.ts
		 - src/computed.ts
		 - src/create.ts
		 - src/index.ts
		 - test/base.test.ts
		 - types/ComputeStrategy.d.ts
		 - types/INucleus.d.ts
		 - types/INuclonConstructor.d.ts
		 - types/Quark.d.ts
	vue@5.0.0-up.25
		 - src/index.ts
	ws@1.0.5
		 - src/index.ts

With means more blessed than my barren rhyme?    .. Wed Aug 23 2023 09:07:38
	alak@5.0.0-up.19